# smrz

./: README.md  run-api.sh
api/: .gitignore  article.html  debug_content.md  main.py  output.html  pyproject.toml  test.html  test_article_to_markdown.py  utils.py
api/app/: clients.py  routes.py  utils.py
api/app/article/: actions.py
api/app/common/: actions.py
api/app/lib/: article_content.py  llm_client.py  summarization.py  transcription.py  video_content.py
api/app/video/: actions.py
api/masters/: the-ux-of-uuids.md
app/: api.ts  app.json  cesconfig.json  package-lock.json  package.json
app/app/: +native-intent.tsx  _layout.tsx  index.tsx  shareintent.tsx  summary-reader-intent.tsx  summary-reader.tsx
app/components/: Button.tsx  Container.tsx  LoadingSpinner.tsx  MarkdownViewer.tsx  SummaryView.tsx  tabs.tsx
choreo/: .gitignore  README.md  client.ts  package.json
choreo/masters/: the-continuous-clean-code-process-cccp.md
choreo/prompts/: article-to-markdown-1.md  improve-transcript-1.md  summarize-1.md
choreo/src/: main.ts  utils.ts
choreo/src/clients/: orion.ts
choreo/src/lib/: llm-client.ts  types.ts
choreo/src/routers/: content.ts  index.ts  test.ts
orion/: .gitignore  pyproject.toml
orion/app/: main.py  routes.py  utils.py
orion/app/features/: transcription.py
