[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "lxml[html-clean]>=5.4.0",
    "newspaper3k>=0.2.8",
    "openai>=1.78.1",
    "openai-whisper",
    "python-dotenv>=1.1.0",
    "readability-lxml>=0.8.4.1",
    "youtube-transcript-api>=1.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
